[project]
name = "versions"
authors = [{name = "Alexander Zelenyak", email = "zzz.sochi@gmail.com"}]
version = "3.3"
description = "Small tool for generate version-string from Unix timestamp."
readme = "README.rst"
dependencies = []

[project.scripts]
versions = "versions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["versions.py"]
